<resources>
    <string name="app_name">MediaLearn</string>
    <string name="start_record">Start Record</string>
    <string name="stop_record">Stop Record</string>
    <string name="init_player">Init Player</string>
    <string name="start_play">Start Play</string>
    <string name="stop_play">Stop Play</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="start">start</string>
    <string name="capture">Capture</string>
    <string name="title_activity_home_activty">HomeActivty</string>
    <string name="jump_to_homeactivity">Jump To HomeActivity</string>
    <string name="jump_to_cameraactivity">Jump To CameraActivity</string>
    <string name="system_camera">使用系统相机</string>
    <string name="use_custom_camera">使用自定义相机</string>
    <string name="jump_to_pictureactivity">Jump To PictureActivity</string>
    <string name="take_photo">拍照</string>
    <string name="confirm">确定</string>
    <string name="reset">重拍</string>
    <string name="request_permission">申请相机权限</string>
    <string name="camera_error">相机发生错误</string>
    <string name="info">详情</string>
    <string name="camera2">使用Camera2拍照</string>
    <string name="use_simple_opengl">使用OpenGL ES</string>
</resources>
