<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/id_button_start_record"
        android:text="@string/start_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startRecord"/>

    <Button
        android:id="@+id/id_button_stop_record"
        android:text="@string/stop_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="stopRecord"/>

    <Button
        android:id="@+id/id_button_init_player"
        android:text="@string/init_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="initPlayer"/>

    <Button
        android:id="@+id/id_button_start_play"
        android:text="@string/start_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startPlay"/>

    <Button
        android:id="@+id/id_button_stop_play"
        android:text="@string/stop_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="stopPlay"/>
</LinearLayout>